red color improvement

--- a/src/japandi.yml
+++ b/src/japandi.yml
@@ -13,11 +13,11 @@ japandi:
     - &CHAMPAGNE "#EDDAC0"
     - &KHAKI_BROWN "#BAA591"
     - &KHAKI_GRAY "#ACA59A"
-    - &FLARE "#ff2e18"
+    - &FLARE "#FF7371"
     - &CHAMPAGNE_PINK "#DDCABB"
   ansi:
     - &COLOR0 "#131418"
-    - &COLOR1 "#ff2e18"
+    - &COLOR1 "#FF7371"
     - &COLOR2 "#FCFAF7"
     - &COLOR3 "#FFD599"
     - &COLOR4 "#BAA591"
@@ -25,7 +25,7 @@ japandi:
     - &COLOR6 "#FCFAF7"
     - &COLOR7 "#FCFAF7"
     - &COLOR8 "#131418"
-    - &COLOR9 "#ff2e18"
+    - &COLOR9 "#FF7371"
     - &COLOR10 "#FCFAF7"
     - &COLOR11 "#FFD599"
     - &COLOR12 "#BAA591"
