--- a/package.json
+++ b/package.json
@@ -1,16 +1,13 @@
 {
 	"name": "theme-japandi",
-	"version": "0.1.1",
+	"version": "0.1.2",
 	"displayName": "Japandi Theme",
 	"homepage": "https://japandi.dev/",
-	"description": "Japandi combines the warmth of Japanese minimalism with Scandinavian functionality to create a coding environment that's serene and focused.",
+	"description": "Japandi combines the minimalism of Japanese design with the elegance of Scandinavian style to create a coding environment that's serene and focused.",
 	"publisher": "Japandi",
 	"license": "MIT",
 	"scripts": {
-		"build": "node ./scripts/build.js",
-		"lint": "node ./scripts/lint.js",
 		"package": "vsce package -o ./bin/japandi.vsix",
-		"vscode:prepublish": "npm run build",
 		"vsce-publish": "vsce publish"
 	},
 	"repository": {
@@ -40,16 +37,19 @@
 	"contributes": {
 		"themes": [
 			{
-				"label": "Japandi Theme",
+				"label": "Japandi Midnight",
 				"uiTheme": "vs-dark",
-				"path": "./theme/japandi.json"
+				"path": "./themes/japandi-midnight.json"
+			},
+			{
+				"label": "Japandi Nightfall",
+				"uiTheme": "vs-dark",
+				"path": "./themes/japandi-nightfall.json"
 			}
 		]
 	},
 	"devDependencies": {
-		"js-yaml": "^4.1.0",
 		"prettier": "^3.0.0",
-		"tinycolor2": "^1.6.0",
 		"vsce": "^2.15.0"
 	}
 }
